--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.13",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "markdown-to-jsx": "^7.1.8",
